src/test/deca/context/invalid/protected-exprTypeNotSubtype.context
protected-exprTypeNotSubtype.deca:8:
